Added-Router and About page

--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
     src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.js"></script>
     <title>To-Do App</title>
   </head>
-  <body>
+  <body style="background-color: #00004d;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" ></div>
   </body>
 </html>
